--- a/Assignments/RohanKediyal-300353370-Assignment4/starter/exercise-01.html
+++ b/Assignments/RohanKediyal-300353370-Assignment4/starter/exercise-01.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Fetch API Exercise Lab</title>
   </head>
+  <script src="scripts.js"></script>
   <body>
     <div id="container">
        <!--Added a tag to h1 tag-->
